@@ -308,7 +308,6 @@ ejemplo: poner el process switcher siempre visible, y pasar otra ventana por enc
 -exportación lenguaje imagenes "drawstring" de quill/paws/daad
 
 -text adventure map: opcion config para recordar nivel zoom, setting connected/unconnected, setting unvisited, otros settings
--char filter: parametro de config
 
 
 -ctrl/alt +qaop o wskl para mover ventana, en vez de shift, y hacer que todas las ventanas lo soporten (por ejemplo ahora solo va con ventanas que no tengan menu)
